# src/FreizeitCockpit.Web/openapi/FreizeitCockpit.Web.json
@@ -1334,6 +1334,48 @@
         }
       }
     },
+    "/api/v1/organizations/{organizationId}/camps/{campId}/responsibility-candidates": {
+      "get": {
+        "tags": [
+          "CampPlanningEndpoints"
+        ],
+        "parameters": [
+          {
+            "name": "organizationId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          },
+          {
+            "name": "campId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/CampMemberSummary"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/v1/organizations/{organizationId}/camps/{campId}/schedule/with-meal": {
       "post": {
         "tags": [
@@ -4910,6 +4952,22 @@
               "string"
             ],
             "format": "int64"
+          }
+        }
+      },
+      "CampMemberSummary": {
+        "required": [
+          "userId",
+          "displayName"
+        ],
+        "type": "object",
+        "properties": {
+          "userId": {
+            "type": "string",
+            "format": "uuid"
+          },
+          "displayName": {
+            "type": "string"
           }
         }
       },
